// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components|CardDeck Base 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="ae"
      data-baseweb="block"
    >
      <h2
        className="af ag ah ai aj"
        data-baseweb="block"
      >
        Popular movies
      </h2>
      <div
        className="ak al ae"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <ul
          className="am an ao ak ap aq ar as at au av"
        >
          <li
            className="aw ax"
          >
            <section
              className="ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bf bg bh bi"
              data-baseweb="card"
              onClick={[Function]}
            >
              <img
                className="ba bb bj bk bh bl bi bm"
                src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
              />
              <div
                className="bn bo bp bq"
              >
                <h1
                  className="ag br bs bt bu bv bw bx by bz c0 c1 c2 c3 c4 c5 c6 c7"
                >
                  July 26
                </h1>
                <div
                  className="c8 c9 ag ca cb cc"
                />
              </div>
            </section>
          </li>
          <li
            className="aw ax"
          >
            <section
              className="ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bf bg bh bi"
              data-baseweb="card"
              onClick={[Function]}
            >
              <img
                className="ba bb bj bk bh bl bi bm"
                src="https://image.tmdb.org/t/p/w500/vqzNJRH4YyquRiWxCCOH0aXggHI.jpg"
              />
              <div
                className="bn bo bp bq"
              >
                <h1
                  className="ag br bs bt bu bv bw bx by bz c0 c1 c2 c3 c4 c5 c6 c7"
                >
                  November 1
                </h1>
                <div
                  className="c8 c9 ag ca cb cc"
                />
              </div>
            </section>
          </li>
          <li
            className="aw ax"
          >
            <section
              className="ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bf bg bh bi"
              data-baseweb="card"
              onClick={[Function]}
            >
              <img
                className="ba bb bj bk bh bl bi bm"
                src="https://image.tmdb.org/t/p/w500/tBuabjEqxzoUBHfbyNbd8ulgy5j.jpg"
              />
              <div
                className="bn bo bp bq"
              >
                <h1
                  className="ag br bs bt bu bv bw bx by bz c0 c1 c2 c3 c4 c5 c6 c7"
                >
                  October 18
                </h1>
                <div
                  className="c8 c9 ag ca cb cc"
                />
              </div>
            </section>
          </li>
          <li
            className="aw ax"
          >
            <section
              className="ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bf bg bh bi"
              data-baseweb="card"
              onClick={[Function]}
            >
              <img
                className="ba bb bj bk bh bl bi bm"
                src="https://image.tmdb.org/t/p/w500/p69QzIBbN06aTYqRRiCOY1emNBh.jpg"
              />
              <div
                className="bn bo bp bq"
              >
                <h1
                  className="ag br bs bt bu bv bw bx by bz c0 c1 c2 c3 c4 c5 c6 c7"
                >
                  November 8
                </h1>
                <div
                  className="c8 c9 ag ca cb cc"
                />
              </div>
            </section>
          </li>
          <li
            className="aw ax"
          >
            <section
              className="ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bf bg bh bi"
              data-baseweb="card"
              onClick={[Function]}
            >
              <img
                className="ba bb bj bk bh bl bi bm"
                src="https://image.tmdb.org/t/p/w500/pIcV8XXIIvJCbtPoxF9qHMKdRr2.jpg"
              />
              <div
                className="bn bo bp bq"
              >
                <h1
                  className="ag br bs bt bu bv bw bx by bz c0 c1 c2 c3 c4 c5 c6 c7"
                >
                  October 18
                </h1>
                <div
                  className="c8 c9 ag ca cb cc"
                />
              </div>
            </section>
          </li>
          <li
            className="aw ax"
          >
            <section
              className="ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bf bg bh bi"
              data-baseweb="card"
              onClick={[Function]}
            >
              <img
                className="ba bb bj bk bh bl bi bm"
                src="https://image.tmdb.org/t/p/w500/7IiTTgloJzvGI1TAYymCfbfl3vT.jpg"
              />
              <div
                className="bn bo bp bq"
              >
                <h1
                  className="ag br bs bt bu bv bw bx by bz c0 c1 c2 c3 c4 c5 c6 c7"
                >
                  October 11
                </h1>
                <div
                  className="c8 c9 ag ca cb cc"
                />
              </div>
            </section>
          </li>
          <li
            className="aw ax"
          >
            <section
              className="ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bf bg bh bi"
              data-baseweb="card"
              onClick={[Function]}
            >
              <img
                className="ba bb bj bk bh bl bi bm"
                src="https://image.tmdb.org/t/p/w500/jIbTPKCRWgmS2HaafKXeRaPHMGp.jpg"
              />
              <div
                className="bn bo bp bq"
              >
                <h1
                  className="ag br bs bt bu bv bw bx by bz c0 c1 c2 c3 c4 c5 c6 c7"
                >
                  November 8
                </h1>
                <div
                  className="c8 c9 ag ca cb cc"
                />
              </div>
            </section>
          </li>
        </ul>
        <button
          className="cd ce cf bf cg ch ci cj ck cl cm cn co cp"
          onClick={[Function]}
        >
          &lt;
        </button>
        <button
          className="cd ce cf bf cg ch ci cj ck cl cm cn co cq"
          onClick={[Function]}
        >
          &gt;
        </button>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots components|CardDeck Loading 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="ae"
      data-baseweb="block"
    >
      <h2
        className="af ag ah ai aj"
        data-baseweb="block"
      >
        Popular movies
      </h2>
      <div
        className="ak al ae"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <ul
          className="am an ao ak ap aq ar as at au av"
        >
          <li
            className="aw ax"
          >
            <section
              className="ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bg bh bi"
              data-baseweb="card"
            >
              <div
                className="bn bo bp bq"
              >
                <div
                  className="c8 c9 ag ca cb cc"
                >
                  <div
                    className="c8 cw ag ca cb cc"
                  >
                    <div
                      className="ak bl cx bm"
                      data-baseweb="block"
                    />
                    <div
                      className="cr cs ct cu cv cy ak cz"
                      data-baseweb="block"
                    />
                    <div
                      className="cz"
                      data-baseweb="block"
                    />
                    <div
                      className="cr cs ct cu cv cy d0 cz"
                      data-baseweb="block"
                    />
                  </div>
                </div>
              </div>
            </section>
          </li>
          <li
            className="aw ax"
          >
            <section
              className="ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bg bh bi"
              data-baseweb="card"
            >
              <div
                className="bn bo bp bq"
              >
                <div
                  className="c8 c9 ag ca cb cc"
                >
                  <div
                    className="c8 cw ag ca cb cc"
                  >
                    <div
                      className="ak bl cx bm"
                      data-baseweb="block"
                    />
                    <div
                      className="cr cs ct cu cv cy ak cz"
                      data-baseweb="block"
                    />
                    <div
                      className="cz"
                      data-baseweb="block"
                    />
                    <div
                      className="cr cs ct cu cv cy d0 cz"
                      data-baseweb="block"
                    />
                  </div>
                </div>
              </div>
            </section>
          </li>
          <li
            className="aw ax"
          >
            <section
              className="ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bg bh bi"
              data-baseweb="card"
            >
              <div
                className="bn bo bp bq"
              >
                <div
                  className="c8 c9 ag ca cb cc"
                >
                  <div
                    className="c8 cw ag ca cb cc"
                  >
                    <div
                      className="ak bl cx bm"
                      data-baseweb="block"
                    />
                    <div
                      className="cr cs ct cu cv cy ak cz"
                      data-baseweb="block"
                    />
                    <div
                      className="cz"
                      data-baseweb="block"
                    />
                    <div
                      className="cr cs ct cu cv cy d0 cz"
                      data-baseweb="block"
                    />
                  </div>
                </div>
              </div>
            </section>
          </li>
          <li
            className="aw ax"
          >
            <section
              className="ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bg bh bi"
              data-baseweb="card"
            >
              <div
                className="bn bo bp bq"
              >
                <div
                  className="c8 c9 ag ca cb cc"
                >
                  <div
                    className="c8 cw ag ca cb cc"
                  >
                    <div
                      className="ak bl cx bm"
                      data-baseweb="block"
                    />
                    <div
                      className="cr cs ct cu cv cy ak cz"
                      data-baseweb="block"
                    />
                    <div
                      className="cz"
                      data-baseweb="block"
                    />
                    <div
                      className="cr cs ct cu cv cy d0 cz"
                      data-baseweb="block"
                    />
                  </div>
                </div>
              </div>
            </section>
          </li>
          <li
            className="aw ax"
          >
            <section
              className="ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bg bh bi"
              data-baseweb="card"
            >
              <div
                className="bn bo bp bq"
              >
                <div
                  className="c8 c9 ag ca cb cc"
                >
                  <div
                    className="c8 cw ag ca cb cc"
                  >
                    <div
                      className="ak bl cx bm"
                      data-baseweb="block"
                    />
                    <div
                      className="cr cs ct cu cv cy ak cz"
                      data-baseweb="block"
                    />
                    <div
                      className="cz"
                      data-baseweb="block"
                    />
                    <div
                      className="cr cs ct cu cv cy d0 cz"
                      data-baseweb="block"
                    />
                  </div>
                </div>
              </div>
            </section>
          </li>
          <li
            className="aw ax"
          >
            <section
              className="ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bg bh bi"
              data-baseweb="card"
            >
              <div
                className="bn bo bp bq"
              >
                <div
                  className="c8 c9 ag ca cb cc"
                >
                  <div
                    className="c8 cw ag ca cb cc"
                  >
                    <div
                      className="ak bl cx bm"
                      data-baseweb="block"
                    />
                    <div
                      className="cr cs ct cu cv cy ak cz"
                      data-baseweb="block"
                    />
                    <div
                      className="cz"
                      data-baseweb="block"
                    />
                    <div
                      className="cr cs ct cu cv cy d0 cz"
                      data-baseweb="block"
                    />
                  </div>
                </div>
              </div>
            </section>
          </li>
          <li
            className="aw ax"
          >
            <section
              className="ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bg bh bi"
              data-baseweb="card"
            >
              <div
                className="bn bo bp bq"
              >
                <div
                  className="c8 c9 ag ca cb cc"
                >
                  <div
                    className="c8 cw ag ca cb cc"
                  >
                    <div
                      className="ak bl cx bm"
                      data-baseweb="block"
                    />
                    <div
                      className="cr cs ct cu cv cy ak cz"
                      data-baseweb="block"
                    />
                    <div
                      className="cz"
                      data-baseweb="block"
                    />
                    <div
                      className="cr cs ct cu cv cy d0 cz"
                      data-baseweb="block"
                    />
                  </div>
                </div>
              </div>
            </section>
          </li>
        </ul>
        <button
          className="cd ce cf bf cg ch ci cj ck cl cm cn co cp"
          onClick={[Function]}
        >
          &lt;
        </button>
        <button
          className="cd ce cf bf cg ch ci cj ck cl cm cn co cq"
          onClick={[Function]}
        >
          &gt;
        </button>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots components|Credit Cast 1`] = `
Array [
  <div
    className=""
  >
    <div>
      <div
        className="d1 b3 d2 b1 b5 d3 d4 b2 d5 d6 b4 d7 d8 d9 da db dc aq dd ap ar bo"
        data-baseweb="table-custom"
        role="grid"
      >
        <div
          className="ak de df dg"
          role="rowgroup"
        >
          <div
            className="aq dh"
            role="row"
          >
            <div
              className="ag di cb dj c9 aq dg c0 c1 c2 bz"
              role="gridcell"
            >
              <div
                className="dk dl bz c1 aq"
              >
                <div
                  className="dm dn do"
                >
                  <div
                    aria-label={null}
                    className="dp dq dr ds ax dt"
                    data-baseweb="avatar"
                    role={null}
                  >
                    <img
                      alt="Carrie Fisher"
                      className="dp dq dr ds ax du dv dw dx"
                      onError={[Function]}
                      src="https://image.tmdb.org/t/p/w185/rfJtncHewKVnHjqpIZvjn24ESeC.jpg"
                    />
                  </div>
                </div>
                <div
                  className="dy dn dz bn"
                >
                  <div
                    className="bu ag cb ck aj"
                    data-baseweb="typo-paragraphlarge"
                  >
                    Carrie Fisher
                  </div>
                  <div
                    className="cw ag bs di e0"
                    data-baseweb="typo-labelsmall"
                  >
                    General Leia Organa
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="aq dh"
            role="row"
          >
            <div
              className="ag di cb dj c9 aq dg c0 c1 c2 bz"
              role="gridcell"
            >
              <div
                className="dk dl bz c1 aq"
              >
                <div
                  className="dm dn do"
                >
                  <div
                    aria-label={null}
                    className="dp dq dr ds ax dt"
                    data-baseweb="avatar"
                    role={null}
                  >
                    <img
                      alt="Mark Hamill"
                      className="dp dq dr ds ax du dv dw dx"
                      onError={[Function]}
                      src="https://image.tmdb.org/t/p/w185/fk8OfdReNltKZqOk2TZgkofCUFq.jpg"
                    />
                  </div>
                </div>
                <div
                  className="dy dn dz bn"
                >
                  <div
                    className="bu ag cb ck aj"
                    data-baseweb="typo-paragraphlarge"
                  >
                    Mark Hamill
                  </div>
                  <div
                    className="cw ag bs di e0"
                    data-baseweb="typo-labelsmall"
                  >
                    Luke Skywalker
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="aq dh"
            role="row"
          >
            <div
              className="ag di cb dj c9 aq dg c0 c1 c2 bz"
              role="gridcell"
            >
              <div
                className="dk dl bz c1 aq"
              >
                <div
                  className="dm dn do"
                >
                  <div
                    aria-label={null}
                    className="dp dq dr ds ax dt"
                    data-baseweb="avatar"
                    role={null}
                  >
                    <img
                      alt="Adam Driver"
                      className="dp dq dr ds ax du dv dw dx"
                      onError={[Function]}
                      src="https://image.tmdb.org/t/p/w185/rsjwgpV2OukxOJ9HEiEyf4qu1vR.jpg"
                    />
                  </div>
                </div>
                <div
                  className="dy dn dz bn"
                >
                  <div
                    className="bu ag cb ck aj"
                    data-baseweb="typo-paragraphlarge"
                  >
                    Adam Driver
                  </div>
                  <div
                    className="cw ag bs di e0"
                    data-baseweb="typo-labelsmall"
                  >
                    Kylo Ren
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="aq dh"
            role="row"
          >
            <div
              className="ag di cb dj c9 aq dg c0 c1 c2 bz"
              role="gridcell"
            >
              <div
                className="dk dl bz c1 aq"
              >
                <div
                  className="dm dn do"
                >
                  <div
                    aria-label={null}
                    className="dp dq dr ds ax dt"
                    data-baseweb="avatar"
                    role={null}
                  >
                    <img
                      alt="Daisy Ridley"
                      className="dp dq dr ds ax du dv dw dx"
                      onError={[Function]}
                      src="https://image.tmdb.org/t/p/w185/oP7khxQ6BUNoGiPFUCI8dikN0ew.jpg"
                    />
                  </div>
                </div>
                <div
                  className="dy dn dz bn"
                >
                  <div
                    className="bu ag cb ck aj"
                    data-baseweb="typo-paragraphlarge"
                  >
                    Daisy Ridley
                  </div>
                  <div
                    className="cw ag bs di e0"
                    data-baseweb="typo-labelsmall"
                  >
                    Rey
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="aq dh"
            role="row"
          >
            <div
              className="ag di cb dj c9 aq dg c0 c1 c2 bz"
              role="gridcell"
            >
              <div
                className="dk dl bz c1 aq"
              >
                <div
                  className="dm dn do"
                >
                  <div
                    aria-label={null}
                    className="dp dq dr ds ax dt"
                    data-baseweb="avatar"
                    role={null}
                  >
                    <img
                      alt="John Boyega"
                      className="dp dq dr ds ax du dv dw dx"
                      onError={[Function]}
                      src="https://image.tmdb.org/t/p/w185/idr2vphzhidyMGOp0ky6RqUMah8.jpg"
                    />
                  </div>
                </div>
                <div
                  className="dy dn dz bn"
                >
                  <div
                    className="bu ag cb ck aj"
                    data-baseweb="typo-paragraphlarge"
                  >
                    John Boyega
                  </div>
                  <div
                    className="cw ag bs di e0"
                    data-baseweb="typo-labelsmall"
                  >
                    Finn
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="e1 e2 aq"
    >
      <div
        aria-label="pagination"
        className="aq dh c9 ag ca bs dj"
        data-baseweb="pagination"
      >
        <button
          className="e3 e4 dh e5 ay az b0 e6 e7 e8 e9 ea eb ec ed ee ef eg eh ei bf ej ek el bv bw bx em ag ca ai dj bb bd ba bc en eo ep eq cw d8 er es et eu ev ew"
          data-baseweb="button"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
        >
          &lt;
        </button>
        <div
          className="ae eb bn ex ey"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            aria-controls={null}
            aria-expanded="false"
            aria-haspopup="true"
            className="ag ca cb cc ax ae ak"
            data-baseweb="select"
            onBlur={[Function]}
            onClick={[Function]}
          >
            <div
              className="ba bb bd bc ax al ak aq ez bf f0 f1 f2 f3 b2 b4 b3 b5 f4 eh f5 c9 f6 f7 f8 f9 d8 ed fa"
              onClick={[Function]}
              onKeyDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="ax ae dy fb fc aq dh fd al fe ff fg c1"
              >
                <div
                  aria-selected="true"
                  className="fh ax fi ap bk al fj fk fl ae c0 c2 fm fn c9 ag ca bs"
                  disabled={false}
                  value={1}
                >
                  1
                </div>
                <div
                  aria-activedescendant={null}
                  aria-disabled={false}
                  aria-expanded={false}
                  aria-label="Selected 1. "
                  aria-labelledby={null}
                  aria-owns={null}
                  aria-required={null}
                  className="ae dt bk d8 e7 e8 e9 ea ed ax eb bw em bv bx c0 c2 bz c1 fo fp"
                  onFocus={[Function]}
                  tabIndex={0}
                />
              </div>
              <div
                className="ax ae aq dn dh fq fn"
              >
                <svg
                  className="dt fr c9 fo fs bf"
                  data-baseweb="icon"
                  size={16}
                  title="open"
                  viewBox="0 0 24 24"
                >
                  <title>
                    open
                  </title>
                  <path
                    d="M12.7071 15.2929L17.1464 10.8536C17.4614 10.5386 17.2383 10 16.7929 10L7.20711 10C6.76165 10 6.53857 10.5386 6.85355 10.8536L11.2929 15.2929C11.6834 15.6834 12.3166 15.6834 12.7071 15.2929Z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <span
          aria-label="page 1 of 6"
          className="ft bp d8 cw"
        >
          of 6
        </span>
        <button
          className="e3 e4 dh e5 ay az b0 e6 e7 e8 e9 ea eb ec ed ee ef eg eh ei bf ej ek el bv bw bx em ag ca ai dj bb bd ba bc en eo ep eq cw d8 er es et eu ev ew"
          data-baseweb="button"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
        >
          &gt;
        </button>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots components|Credit Crew 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="fu"
      data-baseweb="block"
    >
      <div
        className="dk dl bz c1 aq"
      >
        <div
          className="dm dn do"
        >
          <div
            aria-label={null}
            className="dp dq dr ds ax dt"
            data-baseweb="avatar"
            role={null}
          >
            <img
              alt="J.J. Abrams"
              className="dp dq dr ds ax du dv dw dx"
              onError={[Function]}
              src="https://image.tmdb.org/t/p/w185/h0o12c399M5hTKWl0qdgwhaddNt.jpg"
            />
          </div>
        </div>
        <div
          className="dy dn dz bn"
        >
          <div
            className="bu ag cb ck aj"
            data-baseweb="typo-paragraphlarge"
          >
            J.J. Abrams
          </div>
          <div
            className="cw ag bs di e0"
            data-baseweb="typo-labelsmall"
          >
            Screenplay, Director, Story
          </div>
        </div>
      </div>
      <div
        className="dk dl bz c1 aq"
      >
        <div
          className="dm dn do"
        >
          <div
            aria-label={null}
            className="dp dq dr ds ax dt"
            data-baseweb="avatar"
            role={null}
          >
            <img
              alt="Chris Terrio"
              className="dp dq dr ds ax du dv dw dx"
              onError={[Function]}
              src="https://image.tmdb.org/t/p/w185/oljJKka3NTgiQhqhDs1SaCtcWMW.jpg"
            />
          </div>
        </div>
        <div
          className="dy dn dz bn"
        >
          <div
            className="bu ag cb ck aj"
            data-baseweb="typo-paragraphlarge"
          >
            Chris Terrio
          </div>
          <div
            className="cw ag bs di e0"
            data-baseweb="typo-labelsmall"
          >
            Screenplay, Story
          </div>
        </div>
      </div>
      <div
        className="dk dl bz c1 aq"
      >
        <div
          className="dm dn do"
        >
          <div
            aria-label={null}
            className="dp dq dr ds ax dt"
            data-baseweb="avatar"
            role={null}
          >
            <img
              alt="Colin Trevorrow"
              className="dp dq dr ds ax du dv dw dx"
              onError={[Function]}
              src="https://image.tmdb.org/t/p/w185/i0HBClPMPKn3aq8QeQqyThS67EK.jpg"
            />
          </div>
        </div>
        <div
          className="dy dn dz bn"
        >
          <div
            className="bu ag cb ck aj"
            data-baseweb="typo-paragraphlarge"
          >
            Colin Trevorrow
          </div>
          <div
            className="cw ag bs di e0"
            data-baseweb="typo-labelsmall"
          >
            Story
          </div>
        </div>
      </div>
      <div
        className="dk dl bz c1 aq"
      >
        <div
          className="dm dn do"
        >
          <div
            aria-label={null}
            className="dp dq dr ds ax dt"
            data-baseweb="avatar"
            role={null}
          >
            <img
              alt="Derek Connolly"
              className="dp dq dr ds ax du dv dw dx"
              onError={[Function]}
              src="https://image.tmdb.org/t/p/w185/k1VQLCP4RAAkuXZ5HWrdL1NQnWR.jpg"
            />
          </div>
        </div>
        <div
          className="dy dn dz bn"
        >
          <div
            className="bu ag cb ck aj"
            data-baseweb="typo-paragraphlarge"
          >
            Derek Connolly
          </div>
          <div
            className="cw ag bs di e0"
            data-baseweb="typo-labelsmall"
          >
            Story
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots components|Header Loading 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="be ax ak fv fw fx fy fz g0 g1"
    >
      <div
        className="aq"
      >
        <div
          className="dy fb g2 co g3"
        >
          <div
            className="cr cs ct cu cv cy co hq hr g3 hs ak ht"
            data-baseweb="block"
          />
        </div>
        <div
          className="dy fb fc co g3"
        />
        <div
          className="g5 fb g6 g7"
        >
          <div
            className="cr cs ct cu cv cy co hq hr g3 hs ak ht"
            data-baseweb="block"
          />
        </div>
      </div>
      <div
        className="ak aq g8 ez ax g9 ga gb gc gd ge gf gg"
      >
        <div
          className="dy fb gh aq gi e4 gj gk gl"
        >
          <div
            className="cr cs ct cu cv cy hu hv hb"
            data-baseweb="block"
          />
          <div
            className="cr cs ct cu cv cy hw hv"
            data-baseweb="block"
          />
          <div
            className="hv"
            data-baseweb="block"
          />
          <div
            className="cr cs ct cu cv cy hu hv hb"
            data-baseweb="block"
          />
          <div
            className="cr cs ct cu cv cy hw hv"
            data-baseweb="block"
          />
        </div>
        <div
          className="g5 fb g6"
        >
          <h1
            className="gp ci ag ah bs aj gq gr gs gt gu gv gw gx"
          >
            <div
              className="cr cs ct cu cv cy hx hy"
              data-baseweb="block"
            />
          </h1>
          <h2
            className="gy ag di bs e0 gq gz gs h0 gu h1 gw h2"
          >
            <div
              className="cr cs ct cu cv cy hw hz"
              data-baseweb="block"
            />
          </h2>
          <div
            className="ak i0"
            data-baseweb="block"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots components|Header Movie 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="be ax ak fv fw fx fy fz g0 g1"
    >
      <div
        className="aq"
      >
        <div
          className="dy fb g2 co g3"
        >
          <img
            alt="No poster"
            className="ak g4"
            data-baseweb="block"
            src="https://image.tmdb.org/t/p/w500/db32LaOibwEliAmSL2jjDF6oDdj.jpg"
          />
        </div>
        <div
          className="dy fb fc co g3"
        />
        <div
          className="g5 fb g6 g7"
        >
          <div
            style={
              Object {
                "height": "100%",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "display": undefined,
                  "height": "100%",
                  "width": "100%",
                }
              }
            >
              <div />
            </div>
          </div>
        </div>
      </div>
      <div
        className="ak aq g8 ez ax g9 ga gb gc gd ge gf gg"
      >
        <div
          className="dy fb gh aq gi e4 gj gk gl"
        >
          <div
            className="gm fu"
            data-baseweb="block"
          >
            <div
              className="gn ag cb di dj"
              data-baseweb="block"
            >
              <svg
                color="#f9b248"
                fill="currentColor"
                height="0.8em"
                size="0.8em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": "#f9b248",
                  }
                }
                viewBox="0 0 448 512"
                width="0.8em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 192h424c6.6 0 12 5.4 12 12v260c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V204c0-6.6 5.4-12 12-12zm436-44v-36c0-26.5-21.5-48-48-48h-48V12c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v52H160V12c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v52H48C21.5 64 0 85.5 0 112v36c0 6.6 5.4 12 12 12h424c6.6 0 12-5.4 12-12z"
                />
              </svg>
               
              Release
            </div>
            <div
              className="go ag cb di dj"
              data-baseweb="block"
            >
              December 17, 2019
            </div>
          </div>
          <div
            className="gm fu"
            data-baseweb="block"
          >
            <div
              className="gn ag cb di dj"
              data-baseweb="block"
            >
              <svg
                color="#FFFFFF"
                fill="currentColor"
                height="0.8em"
                size="0.8em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": "#FFFFFF",
                  }
                }
                viewBox="0 0 512 512"
                width="0.8em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256,8C119,8,8,119,8,256S119,504,256,504,504,393,504,256,393,8,256,8Zm92.49,313h0l-20,25a16,16,0,0,1-22.49,2.5h0l-67-49.72a40,40,0,0,1-15-31.23V112a16,16,0,0,1,16-16h32a16,16,0,0,1,16,16V256l58,42.5A16,16,0,0,1,348.49,321Z"
                />
              </svg>
               
              Duration
            </div>
            <div
              className="go ag cb di dj"
              data-baseweb="block"
            >
              141 minutes
            </div>
          </div>
          <div
            className="gm fu"
            data-baseweb="block"
          >
            <div
              className="gn ag cb di dj"
              data-baseweb="block"
            >
              <svg
                color="#05A357"
                fill="currentColor"
                height="0.8em"
                size="0.8em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": "#05A357",
                  }
                }
                viewBox="0 0 288 512"
                width="0.8em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M209.2 233.4l-108-31.6C88.7 198.2 80 186.5 80 173.5c0-16.3 13.2-29.5 29.5-29.5h66.3c12.2 0 24.2 3.7 34.2 10.5 6.1 4.1 14.3 3.1 19.5-2l34.8-34c7.1-6.9 6.1-18.4-1.8-24.5C238 74.8 207.4 64.1 176 64V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48h-2.5C45.8 64-5.4 118.7.5 183.6c4.2 46.1 39.4 83.6 83.8 96.6l102.5 30c12.5 3.7 21.2 15.3 21.2 28.3 0 16.3-13.2 29.5-29.5 29.5h-66.3C100 368 88 364.3 78 357.5c-6.1-4.1-14.3-3.1-19.5 2l-34.8 34c-7.1 6.9-6.1 18.4 1.8 24.5 24.5 19.2 55.1 29.9 86.5 30v48c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16v-48.2c46.6-.9 90.3-28.6 105.7-72.7 21.5-61.6-14.6-124.8-72.5-141.7z"
                />
              </svg>
               
              Revenue
            </div>
            <div
              className="go ag cb di dj"
              data-baseweb="block"
            >
              $956,030,690
            </div>
          </div>
          <div
            className="gm fu"
            data-baseweb="block"
          >
            <div
              className="gn ag cb di dj"
              data-baseweb="block"
            >
              <svg
                color="#fc3a52"
                fill="currentColor"
                height="0.8em"
                size="0.8em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": "#fc3a52",
                  }
                }
                viewBox="0 0 512 512"
                width="0.8em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
                />
              </svg>
               
              Votes
            </div>
            <div
              className="go ag cb di dj"
              data-baseweb="block"
            >
              5.1 / 10
            </div>
          </div>
        </div>
        <div
          className="g5 fb g6"
        >
          <h1
            className="gp ci ag ah bs aj gq gr gs gt gu gv gw gx"
          >
            Star Wars: The Rise of Skywalker
          </h1>
          <h2
            className="gy ag di bs e0 gq gz gs h0 gu h1 gw h2"
          >
            Every generation has a legend
          </h2>
          <span
            aria-disabled={null}
            aria-label={null}
            className="ag h3 bs e0 dh h4 b2 b4 b3 b5 ay b0 az e6 h5 h6 h7 h8 ax go h9 e3 fo ez ha hb hc hd he hf hg fn eb  "
            data-baseweb="tag"
            onBlur={[Function]}
            onClick={null}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role={null}
            tabIndex={null}
          >
            <span
              className="al fk fj hh"
              title="Action"
            >
              Action
            </span>
          </span>
          <span
            aria-disabled={null}
            aria-label={null}
            className="ag h3 bs e0 dh h4 b2 b4 b3 b5 ay b0 az e6 h5 h6 h7 h8 ax go h9 e3 fo ez ha hb hc hd he hf hg fn eb  "
            data-baseweb="tag"
            onBlur={[Function]}
            onClick={null}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role={null}
            tabIndex={null}
          >
            <span
              className="al fk fj hh"
              title="Adventure"
            >
              Adventure
            </span>
          </span>
          <span
            aria-disabled={null}
            aria-label={null}
            className="ag h3 bs e0 dh h4 b2 b4 b3 b5 ay b0 az e6 h5 h6 h7 h8 ax go h9 e3 fo ez ha hb hc hd he hf hg fn eb  "
            data-baseweb="tag"
            onBlur={[Function]}
            onClick={null}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role={null}
            tabIndex={null}
          >
            <span
              className="al fk fj hh"
              title="Science Fiction"
            >
              Science Fiction
            </span>
          </span>
          <div
            className="hi"
            data-baseweb="block"
          />
          <button
            className="e3 e4 dh e5 ay az b0 e6 e7 e8 e9 ea eb ec ed ee ef eg eh ei bf ej hj el bv bw bx em ag di bs e0 bb bd ba bc fe ff hg fn hk hl hm hn"
            data-baseweb="button"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
          >
            <div
              className="aq ho"
            >
              <svg
                className="dt fr hp fo fs"
                data-baseweb="icon"
                size={24}
                title="Plus"
                viewBox="0 0 24 24"
              >
                <title>
                  Plus
                </title>
                <path
                  clipRule="evenodd"
                  d="M12 5C12.5523 5 13 5.44772 13 6V11L18 11C18.5523 11 19 11.4477 19 12C19 12.5523 18.5523 13 18 13L13 13V18C13 18.5523 12.5523 19 12 19C11.4477 19 11 18.5523 11 18V13L6 13C5.44772 13 5 12.5523 5 12C5 11.4477 5.44771 11 6 11L11 11V6C11 5.44772 11.4477 5 12 5Z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
            Watchlist
          </button>
        </div>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots components|Header Tv 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="be ax ak fv fw fx fy fz g0 g1"
    >
      <div
        className="aq"
      >
        <div
          className="dy fb g2 co g3"
        >
          <img
            alt="No poster"
            className="ak g4"
            data-baseweb="block"
            src="https://image.tmdb.org/t/p/w500/u3bZgnGQ9T01sWNhyveQz0wH0Hl.jpg"
          />
        </div>
        <div
          className="dy fb fc co g3"
        />
        <div
          className="g5 fb g6 g7"
        >
          <div
            style={
              Object {
                "height": "100%",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "display": undefined,
                  "height": "100%",
                  "width": "100%",
                }
              }
            >
              <div />
            </div>
          </div>
        </div>
      </div>
      <div
        className="ak aq g8 ez ax g9 ga gb gc gd ge gf gg"
      >
        <div
          className="dy fb gh aq gi e4 gj gk gl"
        >
          <div
            className="gm fu"
            data-baseweb="block"
          >
            <div
              className="gn ag cb di dj"
              data-baseweb="block"
            >
              <svg
                color="#f9b248"
                fill="currentColor"
                height="0.8em"
                size="0.8em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": "#f9b248",
                  }
                }
                viewBox="0 0 448 512"
                width="0.8em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 192h424c6.6 0 12 5.4 12 12v260c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V204c0-6.6 5.4-12 12-12zm436-44v-36c0-26.5-21.5-48-48-48h-48V12c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v52H160V12c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v52H48C21.5 64 0 85.5 0 112v36c0 6.6 5.4 12 12 12h424c6.6 0 12-5.4 12-12z"
                />
              </svg>
               
              Last air date
            </div>
            <div
              className="go ag cb di dj"
              data-baseweb="block"
            >
              May 19, 2019
            </div>
          </div>
          <div
            className="gm fu"
            data-baseweb="block"
          >
            <div
              className="gn ag cb di dj"
              data-baseweb="block"
            >
              <svg
                color="#FFFFFF"
                fill="currentColor"
                height="0.8em"
                size="0.8em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": "#FFFFFF",
                  }
                }
                viewBox="0 0 512 512"
                width="0.8em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256,8C119,8,8,119,8,256S119,504,256,504,504,393,504,256,393,8,256,8Zm92.49,313h0l-20,25a16,16,0,0,1-22.49,2.5h0l-67-49.72a40,40,0,0,1-15-31.23V112a16,16,0,0,1,16-16h32a16,16,0,0,1,16,16V256l58,42.5A16,16,0,0,1,348.49,321Z"
                />
              </svg>
               
              Episode runtime
            </div>
            <div
              className="go ag cb di dj"
              data-baseweb="block"
            >
              60 minutes
            </div>
          </div>
          <div
            className="gm fu"
            data-baseweb="block"
          >
            <div
              className="gn ag cb di dj"
              data-baseweb="block"
            >
              <svg
                color="#05A357"
                fill="currentColor"
                height="0.8em"
                size="0.8em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": "#05A357",
                  }
                }
                viewBox="0 0 640 512"
                width="0.8em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M592 0H48A48 48 0 0 0 0 48v320a48 48 0 0 0 48 48h240v32H112a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16v-32a16 16 0 0 0-16-16H352v-32h240a48 48 0 0 0 48-48V48a48 48 0 0 0-48-48zm-16 352H64V64h512z"
                />
              </svg>
               
              Number of seasons
            </div>
            <div
              className="go ag cb di dj"
              data-baseweb="block"
            >
              8 season(s)
            </div>
          </div>
          <div
            className="gm fu"
            data-baseweb="block"
          >
            <div
              className="gn ag cb di dj"
              data-baseweb="block"
            >
              <svg
                color="#fc3a52"
                fill="currentColor"
                height="0.8em"
                size="0.8em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": "#fc3a52",
                  }
                }
                viewBox="0 0 512 512"
                width="0.8em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
                />
              </svg>
               
              Votes
            </div>
            <div
              className="go ag cb di dj"
              data-baseweb="block"
            >
              8.2 / 10
            </div>
          </div>
        </div>
        <div
          className="g5 fb g6"
        >
          <h1
            className="gp ci ag ah bs aj gq gr gs gt gu gv gw gx"
          >
            Game of Thrones
          </h1>
          <span
            aria-disabled={null}
            aria-label={null}
            className="ag h3 bs e0 dh h4 b2 b4 b3 b5 ay b0 az e6 h5 h6 h7 h8 ax go h9 e3 fo ez ha hb hc hd he hf hg fn eb  "
            data-baseweb="tag"
            onBlur={[Function]}
            onClick={null}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role={null}
            tabIndex={null}
          >
            <span
              className="al fk fj hh"
              title="Sci-Fi & Fantasy"
            >
              Sci-Fi & Fantasy
            </span>
          </span>
          <span
            aria-disabled={null}
            aria-label={null}
            className="ag h3 bs e0 dh h4 b2 b4 b3 b5 ay b0 az e6 h5 h6 h7 h8 ax go h9 e3 fo ez ha hb hc hd he hf hg fn eb  "
            data-baseweb="tag"
            onBlur={[Function]}
            onClick={null}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role={null}
            tabIndex={null}
          >
            <span
              className="al fk fj hh"
              title="Drama"
            >
              Drama
            </span>
          </span>
          <div
            className="hi"
            data-baseweb="block"
          />
          <button
            className="e3 e4 dh e5 ay az b0 e6 e7 e8 e9 ea eb ec ed ee ef eg eh ei bf ej hj el bv bw bx em ag di bs e0 bb bd ba bc fe ff hg fn hk hl hm hn"
            data-baseweb="button"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
          >
            <div
              className="aq ho"
            >
              <svg
                className="dt fr hp fo fs"
                data-baseweb="icon"
                size={24}
                title="Plus"
                viewBox="0 0 24 24"
              >
                <title>
                  Plus
                </title>
                <path
                  clipRule="evenodd"
                  d="M12 5C12.5523 5 13 5.44772 13 6V11L18 11C18.5523 11 19 11.4477 19 12C19 12.5523 18.5523 13 18 13L13 13V18C13 18.5523 12.5523 19 12 19C11.4477 19 11 18.5523 11 18V13L6 13C5.44772 13 5 12.5523 5 12C5 11.4477 5.44771 11 6 11L11 11V6C11 5.44772 11.4477 5 12 5Z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
            Watchlist
          </button>
        </div>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots components|Hero Base 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="ak"
    >
      <div
        className="cd ak i1 al"
      >
        <div
          className="ak ap cd i2 i3"
        />
        <div
          className="cd cp cq cf i4 i5"
        />
        <img
          alt="No poster"
          className="du ak ap i6"
          src="https://image.tmdb.org/t/p/w500/9Vp8MKqrwRAtvACF7PBwbvdG4dq.jpg"
        />
        <img
          alt="No backdrop"
          className="co g3 i7 i8"
          src="https://image.tmdb.org/t/p/original/zTxHf9iIOCqRbxvl8W5QYKrsMLq.jpg"
        />
      </div>
      <div
        className="aq ae i9 gb gc ia ib ic"
      >
        <div
          className="id ie co al if ig"
        >
          <img
            alt="No poster"
            className="ak g4"
            src="https://image.tmdb.org/t/p/w500/9Vp8MKqrwRAtvACF7PBwbvdG4dq.jpg"
          />
        </div>
        <div
          className="dg aq dd"
        >
          <div
            className=""
          >
            <h2
              className="gp ag ck bs cc ci ih ii ij ik il"
            >
              Jumanji: The Next Level
            </h2>
            <h3
              className="gy ag ck bs cc im"
            >
              December 12, 2019
            </h3>
            <div
              className=""
            >
              <button
                className="e3 e4 dh e5 ay az b0 e6 e7 e8 e9 ea eb ec ed ee ef eg eh ei bf ej hj el bv bw bx em ag di bs e0 bb bd ba bc fe ff hg fn hk hl hm hn"
                data-baseweb="button"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
              >
                <div
                  className="aq ho"
                >
                  <svg
                    className="dt fr hp fo fs"
                    data-baseweb="icon"
                    size={24}
                    title="Plus"
                    viewBox="0 0 24 24"
                  >
                    <title>
                      Plus
                    </title>
                    <path
                      clipRule="evenodd"
                      d="M12 5C12.5523 5 13 5.44772 13 6V11L18 11C18.5523 11 19 11.4477 19 12C19 12.5523 18.5523 13 18 13L13 13V18C13 18.5523 12.5523 19 12 19C11.4477 19 11 18.5523 11 18V13L6 13C5.44772 13 5 12.5523 5 12C5 11.4477 5.44771 11 6 11L11 11V6C11 5.44772 11.4477 5 12 5Z"
                      fillRule="evenodd"
                    />
                  </svg>
                </div>
                Watchlist
              </button>
              <div
                className="in bp"
                data-baseweb="block"
              />
              <button
                className="e3 e4 dh e5 ay az b0 e6 e7 e8 e9 ea eb ec ed ee ef eg eh ei bf ej hj el bv bw bx em ag di bs e0 bb bd ba bc fe ff hg fn c9 io ip iq"
                data-baseweb="button"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
              >
                <div
                  className="aq ho"
                >
                  <svg
                    className="dt fr hp fo fs"
                    data-baseweb="icon"
                    size={24}
                    title="Show"
                    viewBox="0 0 20 20"
                  >
                    <title>
                      Show
                    </title>
                    <path
                      d="M.2 10a11 11 0 0119.6 0A11 11 0 01.2 10zm9.8 4a4 4 0 100-8 4 4 0 000 8zm0-2a2 2 0 110-4 2 2 0 010 4z"
                    />
                  </svg>
                </div>
                More Info
              </button>
            </div>
          </div>
          <div
            className="ir aq is fe it iu"
          >
            <button
              className="ch iv bf ae iw ix aw iy iz"
              onClick={[Function]}
            >
              <div
                className="ak ap cd i2 j0"
              />
              <img
                alt="No backdrop"
                className="ak g4"
                src="https://image.tmdb.org/t/p/original/zTxHf9iIOCqRbxvl8W5QYKrsMLq.jpg"
              />
            </button>
            <button
              className="ch iv bf ae iw ix aw iy iz"
              onClick={[Function]}
            >
              <div
                className="ak ap cd i2 j1"
              />
              <img
                alt="No backdrop"
                className="ak g4"
                src="https://image.tmdb.org/t/p/w1280/1ZSjrBUHP2jm1QlQEyLGufL289q.jpg"
              />
            </button>
            <button
              className="ch iv bf ae iw ix aw iy iz"
              onClick={[Function]}
            >
              <div
                className="ak ap cd i2 j1"
              />
              <img
                alt="No backdrop"
                className="ak g4"
                src="https://image.tmdb.org/t/p/w1280/aZ1ZqJ4uO1RK5gU5jRsO4qG7rJo.jpg"
              />
            </button>
            <button
              className="ch iv bf ae iw ix aw iy iz"
              onClick={[Function]}
            >
              <div
                className="ak ap cd i2 j1"
              />
              <img
                alt="No backdrop"
                className="ak g4"
                src="https://image.tmdb.org/t/p/w1280/n3UanIvmnBlH531pykuzNs4LbH6.jpg"
              />
            </button>
            <button
              className="ch iv bf ae iw ix aw iy iz"
              onClick={[Function]}
            >
              <div
                className="ak ap cd i2 j1"
              />
              <img
                alt="No backdrop"
                className="ak g4"
                src="https://image.tmdb.org/t/p/w1280/1ZSjrBUHP2jm1QlQEyLGufL289q.jpg"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots components|Hero Loading 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="ak"
    >
      <div
        className="cd ak i1 al"
      >
        <div
          className="ak ap cd i2 i3"
        />
        <div
          className="cd cp cq cf i4 i5"
        />
      </div>
      <div
        className="aq ae i9 gb gc ia ib ic"
      >
        <div
          className="id ie co al if ig"
        >
          <div
            className="cr cs ct cu cv cy ak ap"
            data-baseweb="block"
          />
        </div>
        <div
          className="dg aq dd"
        >
          <div
            className=""
          >
            <h2
              className="gp ag ck bs cc ci ih ii ij ik il"
            >
              <div
                className="cr cs ct cu cv cy hx hy"
                data-baseweb="block"
              />
            </h2>
            <h3
              className="gy ag ck bs cc im"
            >
              <div
                className="cr cs ct cu cv cy hw hz"
                data-baseweb="block"
              />
            </h3>
          </div>
          <div
            className="ir aq is fe it iu"
          >
            <button
              className="ch iv bf ae iw ix aw iy iz"
            >
              <div
                className="cr cs ct cu cv cy ak ap"
                data-baseweb="block"
              />
            </button>
            <button
              className="ch iv bf ae iw ix aw iy iz"
            >
              <div
                className="cr cs ct cu cv cy ak ap"
                data-baseweb="block"
              />
            </button>
            <button
              className="ch iv bf ae iw ix aw iy iz"
            >
              <div
                className="cr cs ct cu cv cy ak ap"
                data-baseweb="block"
              />
            </button>
            <button
              className="ch iv bf ae iw ix aw iy iz"
            >
              <div
                className="cr cs ct cu cv cy ak ap"
                data-baseweb="block"
              />
            </button>
            <button
              className="ch iv bf ae iw ix aw iy iz"
            >
              <div
                className="cr cs ct cu cv cy ak ap"
                data-baseweb="block"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots components|Review Base 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="fu"
      data-baseweb="block"
    >
      <div
        className="j2 j3 dk e2 bz c1"
      >
        <div
          className="cw ag bs di e0"
          data-baseweb="typo-labelsmall"
        >
          Vogel
        </div>
        <p
          className="ag ca cb cc go gq j4 j5 j6"
        >
          Well.. this was dull.
        </p>
        <button
          className="e3 e4 dh e5 ay az b0 e6 e7 e8 e9 ea eb ec ed ee ef eg eh ei bf ej hj el bv bw bx em ag ca bs dj bb bd ba bc c0 c2 bz c1 cw d8 er j7 et j8 ev j9"
          data-baseweb="button"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
        >
          Read more
        </button>
      </div>
      <div
        className="j2 j3 dk e2 bz c1"
      >
        <div
          className="cw ag bs di e0"
          data-baseweb="typo-labelsmall"
        >
          Olon
        </div>
        <p
          className="ag ca cb cc go gq j4 j5 j6"
        >
          Went to the first showing in town tonight.  I really enjoyed the film.  Although it leaned heavy on nostalgia, it should, since it is wrapping up 40 years.  I did not care for The Last Jedi, and was worried going in.  Will do a deeper dive after I have seen it a few times.
        </p>
        <button
          className="e3 e4 dh e5 ay az b0 e6 e7 e8 e9 ea eb ec ed ee ef eg eh ei bf ej hj el bv bw bx em ag ca bs dj bb bd ba bc c0 c2 bz c1 cw d8 er j7 et j8 ev j9"
          data-baseweb="button"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
        >
          Read more
        </button>
      </div>
      <div
        className="j2 j3 dk e2 bz c1"
      >
        <div
          className="cw ag bs di e0"
          data-baseweb="typo-labelsmall"
        >
          Sheldon Nylander
        </div>
        <p
          className="ag ca cb cc go gq j4 j5 j6"
        >
          It’s hard to write a review for this film without any major spoilers, so this might seem a little vague here and there. There will be very minor spoilers, primarily what’s revealed in the opening text crawl or the trailers, so not much, but if you want to go into this film completely virgin, stop here.
        </p>
        <button
          className="e3 e4 dh e5 ay az b0 e6 e7 e8 e9 ea eb ec ed ee ef eg eh ei bf ej hj el bv bw bx em ag ca bs dj bb bd ba bc c0 c2 bz c1 cw d8 er j7 et j8 ev j9"
          data-baseweb="button"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
        >
          Read more
        </button>
      </div>
      <div
        className="j2 j3 dk e2 bz c1"
      >
        <div
          className="cw ag bs di e0"
          data-baseweb="typo-labelsmall"
        >
          Luis_989
        </div>
        <p
          className="ag ca cb cc go gq j4 j5 j6"
        >
          When The Force Awakens was released the vast majority of fans liked it. They were practically watching a remake of A New Hope but it was enough for them. Although they never liked Rey. That damn feminist agenda right?
        </p>
        <button
          className="e3 e4 dh e5 ay az b0 e6 e7 e8 e9 ea eb ec ed ee ef eg eh ei bf ej hj el bv bw bx em ag ca bs dj bb bd ba bc c0 c2 bz c1 cw d8 er j7 et j8 ev j9"
          data-baseweb="button"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
        >
          Read more
        </button>
      </div>
      <div
        className="ja jb dk e2 bz c1"
      >
        <div
          className="cw ag bs di e0"
          data-baseweb="typo-labelsmall"
        >
          msbreviews
        </div>
        <p
          className="ag ca cb cc go gq j4 j5 j6"
        >
          If you enjoy reading my Spoiler-Free reviews, please follow my blog @

        </p>
        <button
          className="e3 e4 dh e5 ay az b0 e6 e7 e8 e9 ea eb ec ed ee ef eg eh ei bf ej hj el bv bw bx em ag ca bs dj bb bd ba bc c0 c2 bz c1 cw d8 er j7 et j8 ev j9"
          data-baseweb="button"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
        >
          Read more
        </button>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;
